@@ -24,7 +24,8 @@ var exceptions = require('./exceptions'),
 var IMPLICIT_OPTIONAL_PROPS = ['name',
                                'detached',
                                {name: 'method', defaultValue: '*'},
-                               {name: 'hostname', defaultValue: '.*'}];
+                               {name: 'hostname', defaultValue: '.*'},
+                               {name: 'reset', defaultValue: function() {}}];
 
 /*
 
@@ -75,6 +76,10 @@ function RoboHydraHead(props) {
                         self.requestParamNames.push(name);
                         return '([^/]+)';
                     });
+    if (typeof this.reset !== 'function') {
+        throw new InvalidRoboHydraHeadException("Property 'reset' must be a function");
+    }
+    this.reset();
 }
 RoboHydraHead.mandatoryProperties = ['path', 'handler'];
 RoboHydraHead.optionalProperties = [].concat(IMPLICIT_OPTIONAL_PROPS);
@@ -198,7 +203,6 @@ RoboHydraHead.prototype._handle = function(req, res, next) {
 
     this.handler(finalReq, res, next);
 };
-RoboHydraHead.prototype.reset = function() {};
 
 
 
@@ -236,7 +240,6 @@ function roboHydraHeadType(settings) {
         if (typeof settings.init === 'function') {
             settings.init.call(this);
         }
-        this.reset();
     };
 
     newConstructorFunction.mandatoryProperties =
@@ -244,9 +247,6 @@ function roboHydraHeadType(settings) {
     newConstructorFunction.optionalProperties =
         (settings.optionalProperties || []).concat(IMPLICIT_OPTIONAL_PROPS);
     newConstructorFunction.prototype = new parentClass();
-    if (settings.reset) {
-        newConstructorFunction.prototype.reset = settings.reset;
-    }
 
     return newConstructorFunction;
 }
@@ -291,12 +291,11 @@ var RoboHydraHeadStatic = roboHydraHeadType({
         }
     },
 
-    reset: function() {
-        this.responseIndex = 0;
-    },
-
     parentPropertyBuilder: function() {
         return {path:    this.path,
+                reset: function() {
+                    this.responseIndex = 0;
+                },
                 handler: function(req, res) {
                     var content     = this.content,
                         contentType = this.contentType,
