@@ -1,6 +1,8 @@
 Version 0.x.x (XXXX-XX-XX)
 --------------------------
 
+	* Make the 'reset' available for RoboHydraHead.
+
 Version 0.5 (2014-08-28)
 ------------------------
 
